<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainScroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mainHost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/main_padding"
        android:clipToPadding="false">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cabinet_title"
            android:textColor="@color/primary"
            android:textSize="@dimen/title_size"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:paddingBottom="@dimen/title_padding"
            android:id="@+id/cabinet_title" />

        <androidx.cardview.widget.CardView
            android:id="@+id/balance_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/card_background"
            app:cardCornerRadius="@dimen/corner_radius"
            app:cardElevation="@dimen/elevation"
            app:layout_constraintTop_toBottomOf="@+id/cabinet_title">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:padding="@dimen/card_padding">

                <androidx.constraintlayout.widget.ConstraintLayout
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:id="@+id/balance_container">

                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/balance_icon"
                        android:layout_width="@dimen/balance_icon_size"
                        android:layout_height="@dimen/balance_icon_size"

                        android:background="@color/balance_icon_background"
                        android:src="@drawable/ic_ruble"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:contentPadding="@dimen/balance_icon_padding"
                        app:shapeAppearanceOverlay="@style/roundedIcon"
                        app:tint="@color/balance_icon_fill">

                    </com.google.android.material.imageview.ShapeableImageView>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/balance_title"
                        android:textColor="@color/primary"
                        android:textSize="@dimen/mini_title_size"
                        android:textStyle="bold"
                        app:layout_constraintStart_toEndOf="@id/balance_icon"
                        app:layout_constraintTop_toTopOf="parent"
                        android:layout_marginStart="@dimen/icon_margin"
                        android:id="@+id/balance_title" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/personal_number"
                        android:textColor="@color/card_grey"
                        android:textSize="@dimen/card_data_size"
                        app:layout_constraintStart_toEndOf="@id/balance_icon"
                        app:layout_constraintTop_toBottomOf="@id/balance_title"
                        android:layout_marginStart="@dimen/icon_margin"
                        android:id="@+id/personal_number_title" />
                    <TextView
                        android:id="@+id/personal_number"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="11010010"
                        android:textColor="@color/card_grey"
                        android:textSize="@dimen/card_data_size"
                        app:layout_constraintStart_toEndOf="@id/personal_number_title"
                        app:layout_constraintTop_toBottomOf="@id/balance_title"
                        android:paddingHorizontal="@dimen/text_space" />
                    <TextView
                        android:id="@+id/balance"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        tools:text="100.42 ₽"
                        android:textColor="@color/card_balance"
                        android:textSize="@dimen/mini_title_size"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:fontFamily="sans-serif-medium" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:id="@+id/pay_container"
                    android:layout_marginTop="@dimen/card_padding"
                    app:layout_constraintTop_toBottomOf="@id/balance_container">

                    <TextView
                        android:id="@+id/to_pay"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="@string/to_pay"
                        android:textColor="@color/card_grey"
                        android:textSize="@dimen/card_data_size"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        />

                    <TextView
                        android:id="@+id/pay_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/pay_text"
                        android:textAllCaps="true"
                        android:text="@string/topup"
                        android:fontFamily="sans-serif-medium"
                        android:textSize="@dimen/card_data_size"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tariff_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tariff_title"
            android:textColor="@color/primary"
            android:textSize="@dimen/mini_title_size"
            android:textStyle="bold"
            android:paddingTop="@dimen/mini_title_padding_t"
            android:paddingBottom="@dimen/mini_title_padding_b"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/balance_card"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/tariffs_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/card_background"
            app:cardCornerRadius="@dimen/corner_radius"
            app:cardElevation="@dimen/elevation"
            app:layout_constraintTop_toBottomOf="@+id/tariff_title">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/tariff_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="true"
                android:orientation="vertical"
                android:paddingStart="@dimen/card_padding"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="parent"
                tools:itemCount="2"
                tools:listitem="@layout/tariff_item" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/user_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_title"
            android:textColor="@color/primary"
            android:textSize="@dimen/mini_title_size"
            android:textStyle="bold"
            android:paddingTop="@dimen/mini_title_padding_t"
            android:paddingBottom="@dimen/mini_title_padding_b"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tariffs_card"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/user_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/card_background_alt"
            app:cardCornerRadius="@dimen/corner_radius"
            app:cardElevation="0dp"
            app:layout_constraintTop_toBottomOf="@+id/user_title">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/buttons_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="true"
                android:orientation="vertical"
                android:paddingStart="@dimen/card_padding"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="parent"
                tools:itemCount="3"
                tools:listitem="@layout/user_item" />
        </androidx.cardview.widget.CardView>


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
